# KissaBot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  ihsiok.lua  init.lua  kissa.d.lua  kissa.lua  main.lua  prototype.drawio
kissa/: Cargo.toml
kissa.doc/: kissa.lua
kissa/src/: lib.rs
lua/: init.lua  main.lua
plugins/test_clashed_publish/: Cargo.toml
plugins/test_clashed_publish/src/: lib.rs
plugins/test_ipc_events/: Cargo.toml
plugins/test_ipc_events/src/: lib.rs
plugins/test_ipc_handler/: Cargo.toml
plugins/test_ipc_handler/src/: lib.rs
plugins/test_ipc_publish/: Cargo.toml
plugins/test_ipc_publish/src/: lib.rs
src/: kissa_plugin.rs  main.rs
src/kissacore/: userdata.rs
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs
