[package]
name = "ihsiok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "^0.9.0-rc.3", features = ["lua54"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[profile.dev]
export-executable-symbols = true
