[package]
name = "kissa-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "^0.9.0-rc.3", features = ["lua54", "parking_lot"] }
kissa-core-event = "^0.1.0"

[build-dependencies]
serde_json = "1.0.104"

[profile.dev]
export-executable-symbols = true
